[package]
name = "pinocchio_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-system = "0.5.0"
# 启用 curve25519 以便在非 BPF 目标上使用 find_program_address（如本地构建/测试）
solana-address = { version = "2.0", features = ["curve25519"] }

[lib]
crate-type = ["lib", "cdylib"]