[package]
name = "pinocchio_amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"

[dev-dependencies]
litesvm = "0.9"
solana-address = "2"
solana-account = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "4"
solana-program = "2"
solana-signer = "3"
solana-system-program = "3"
solana-transaction = "3"
spl-token = "6"
spl-associated-token-account = "4"
